testsuite/bsc.typechecker/context-errors/ContextReductionRemoveImplied2.bsv
import Vector::*;

module mkMod ();
   Reg#(Vector#(8,Integer)) rg <- mkRegU;
endmodule
